--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,26 +2,26 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.para.small-para {
+.para,
+.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
-  font-size: 14px;
+  font-size: 22px;
 }
 
-.para {
-  font-size: 22px;
+.small-para {
+  font-size: 14px;
   font-weight: 800;
 }
 
-.confirm {
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
-  font-size: 20px;
 } 
 
-.cancel {
+.button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -33,11 +33,9 @@ body {
   font-weight: 100;
 }
 
-
- .child {
+.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
-
 
